media and edit events

--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -322,7 +322,7 @@
         <div class="tabbable" >
   				<ul class="nav nav-tabs">
 				    <li class={{indentitiesSubTab}}><a ng-click="indentitiesTabFun()" data-toggle="tab" >Indentities</a></li>
-				    <li class={{documnetsUploadsTab}}><a ng-click="documnetsUploadsTabFun()" data-toggle="tab">Documnets Uploads</a></li>
+				    <li class={{documnetsUploadsTab}}><a ng-click="documnetsUploadsTabFun()" data-toggle="tab">Documents Uploads</a></li>
     			 	<li class={{creditCardDetailsTab}}><a ng-click="creditCardDetailsTabFun()" data-toggle="tab">CreditCard Details</a></li>
     			 	<li class={{ACHDetailsTab}}><a ng-click="ACHDetailsTabFun()" data-toggle="tab">ACH Details</a></li>
 			    </ul>
