--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -61,7 +61,7 @@
 	      <p class="list-group-item-text">Manage various Media Asset Information</p>
 	    </a>
 	    <a class="list-group-item" href="#/event" ng-show="PermissionService.showMenu('READ_EVENT')">
-	      <h4 class="list-group-item-heading"><i class="icon-eye-open icon-large"></i>&nbsp;&nbsp;Event Price</h4>
+	      <h4 class="list-group-item-heading"><i class="icon-eye-open icon-large"></i>&nbsp;&nbsp;Event & Pricing</h4>
 	      <p class="list-group-item-text">Define the Media Asset and it's Pricing</p>
 	    </a>
 	       <a class="list-group-item" href="#/services" ng-show="PermissionService.showMenu('READ_SERVICE')">
