--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -273,7 +273,7 @@
                 </div>
           </div>
       </tab>
-      <tab heading="More Info" select="getClientIdentityDocuments()" active="identitiesTab" 
+      <tab heading="More Info" select="getClientIdentityDocuments()" active="moreInfoTab" 
       			ng-show="$parent.PermissionService.showMenu('read_CLIENTIDENTIFIER')">
      
      <div class="pull-right "> 
