--- a/myaccount/selfcare_module/views/clients/vodevents.html
+++ b/myaccount/selfcare_module/views/clients/vodevents.html
@@ -21,12 +21,13 @@
 
       </div>
 	<div>
-	    <ul class="breadcrumb">
-	        <li class="active">{{'link.vod'|translate}}</li>
-	    </ul>
+		<ul class="breadcrumb">
+			<li><a href="#/listofvods">{{'link.listofvods' | translate}}</a> <span class="divider">/</span></li>
+	        <li class="active">{{'link.vod.add.event'|translate}}</li>
+		</ul>
     </div>
- 	<div class="row-fluid" ng-show="vodEventScreen">
- 	<br/>
+ 	<div class="row-fluid" ng-show="vodEventScreen"><br/>
+ 	<label style="color:#0088cc;font-size:25px;" class="animated fadeInUp">{{ 'label.vod.add.event' | translate }}</label>
  		<form ng-submit="search(filterText)" style="margin:0px;">
 		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="{{'placeholder.filter.vod'|translate}}">
 		</form>
@@ -42,14 +43,14 @@
 	            </tr>
 	        </thead>
 	        <tbody>
-	            <tr class="pointer-main" ng-repeat="mediaDetail in mediaDetails  | filter:filterText" >
-	                <td class="pointer">{{mediaDetail.mediaTitle}}</td>
-	                <td class="pointer">{{mediaDetail.optType}}</td>
-	                <td class="pointer">{{mediaDetail.mediaRating}}</td>
-	                <td class="pointer">{{mediaDetail.quality}}</td>
-	                <td class="pointer">{{mediaDetail.price}}</td>
+	            <tr class="pointer-main"  ng-repeat="mediaDetail in mediaDetails  | filter:filterText" >
+	                <td class="pointer"><label for="{{mediaDetail.mediaId}}{{mediaDetail.quality}}">{{mediaDetail.mediaTitle}}</label></td>
+	                <td class="pointer"><label for="{{mediaDetail.mediaId}}{{mediaDetail.quality}}">{{mediaDetail.optType}}</label></td>
+	                <td class="pointer"><label for="{{mediaDetail.mediaId}}{{mediaDetail.quality}}">{{mediaDetail.mediaRating}}</label></td>
+	                <td class="pointer"><label for="{{mediaDetail.mediaId}}{{mediaDetail.quality}}">{{mediaDetail.quality}}</label></td>
+	                <td class="pointer"><label for="{{mediaDetail.mediaId}}{{mediaDetail.quality}}">{{mediaDetail.price}}</label></td>
 	               <!--  <td><input type="checkbox" ng-model="active" ng-change="selectedEventsFun(mediaDetail.mediaId,mediaDetail.mediaTitle,mediaDetail.price,mediaDetail.quality,active)"></td> -->
-	                <td><input type="checkbox" ng-model="active" ng-change="selectedEventsFun(mediaDetail,active)"></td>
+	                <td><label for="{{mediaDetail.mediaId}}{{mediaDetail.quality}}"><input type="checkbox" id="{{mediaDetail.mediaId}}{{mediaDetail.quality}}" ng-model="active" ng-change="selectedEventsFun(mediaDetail,active)"></label></td>
 	            </tr>
 	        </tbody>
 	    </table>
@@ -58,7 +59,7 @@
 		</div> 
 	</div>
 	<div class="row-fluid" ng-show="eventDetailsPreview">
-		<h3>{{'label.vod.conformation'|translate}}</h3>
+		<h3 style="color:#0088cc;">{{'label.vod.event.conformation'|translate}}</h3>
 		<div ng-show="vodEventRedirectToDalpay">
 			<div class="alert alert-info animated pulse" role="alert">
 				<img style="margin-left:400px;" alt="Loading.." ng-src="./selfcare_module/images/loader_circle.gif" width="20px"/>
@@ -81,9 +82,11 @@
 	            </tr>
 	        </tbody>
 	    </table>
-	   <br/>
-	   <span style="color:#0088cc;font-size:20px;" class="pull-left">{{'label.amount.total'|translate}}</span>
-	   <span style="font-size:20px;" class="pull-right">{{totalAmount}}</span><br/><br/>
+	   <hr width=20% style="margin-left:568px;background-color:#0088cc;height:4px;margin-bottom:4px;">
+	   <div class="animated pulse">
+	 	  <span style="color:#0088cc;font-size:20px;margin-left:580px;" class="pull-left">{{'label.amount.total'|translate}}</span>
+	  	 <span style="font-size:20px;margin-right:210px;" class="pull-right">{{totalAmount}}</span><br/><br/>
+	   </div>
 		<div class="pull-right" >
 				<a ng-disabled="vodEventRedirectToDalpay"  ng-click="cancelDalpayBtnFun()" class="btn" >{{'btn.cancel'|translate}}</a>
 				<a href="{{URLForDalpay}}" ng-click="dalpayBtnFun()" ng-disabled="vodEventRedirectToDalpay" class="btn btn-primary animated fadeInUp">{{'btn.dalpay'|translate}}</a>
