--- a/app/views/organization/itemSale.html
+++ b/app/views/organization/itemSale.html
@@ -88,7 +88,7 @@
 				  <div class="control-group">
 						<label class="control-label">Total Item Price&nbsp;</label>
 						<div class="controls">
-							<input type="text" id="itemPrice"  ng-model="formData.chargeAmount">
+							<input type="text" id="itemPrice"  ng-model="formData.chargeAmount" readonly>
 						</div>
 					</div>
 				</td>
